--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react-swc": "^3.3.2",
-    "standard": "^17.1.0",
+    "semistandard": "^17.0.0",
     "vite": "^4.4.5"
   },
   "eslintConfig": {
-    "extends": "./node_modules/standard/eslintrc.json"
+    "extends": "./node_modules/semistandard/eslintrc.json"
   }
 }
